style.scss
:root {
  --bg: #070606;
  --text: #fff;
  --secondary: #fff;
  --show: default;
  --button-glow: drop-shadow(0px 0px 21px #f14a16);
  --card-grey-bg: linear-gradient(
    164deg,
    rgba(255, 255, 255, 0.7) 0%,
    rgba(255, 255, 255, 0.1) 100.82%
  );
  --card-grey-shadow: none;
  --cta-shadow: none;
  --toggle-shadow: none;
  --brightness-filter: none;
}
[data-theme="light"] {
  --show: none;
  --text: #000;
  --secondary: #282828;
  --bg: #fcfcfc;
  --button-glow: drop-shadow(2px 4px 18px rgba(241, 74, 22, 0.25));
  --card-grey-bg: #282828;
  --card-grey-shadow: 5px 10px 18px 0px rgba(0, 0, 0, 0.25);
  --cta-shadow: drop-shadow(0px 2px 8px rgba(0, 0, 0, 0.6));
  --toggle-shadow: drop-shadow(0px 4px 12px rgba(0, 0, 0, 0.25));
  --brightness-filter: brightness(0.117);
}
// $main-background: #070606;
* {
  margin: 0;
  font-family: "Proxima Nova", sans-serif;
}
.container {
  z-index: 1;
  position: relative;
  color: var(--text);
  background: var(--bg);
  // &--dark {
  // }

  // overflow: hidden;
}

.hero {
  display: flex;
  flex-direction: column;
  position: relative;
  padding: 97px 23px 58px 23px;

  &__search {
    z-index: 10;
    margin: 0 13px;
  }
  // &__image-container {
  //   display: none;
  // }
  &__heading {
    margin: 0;
    margin-top: 32px;
    color: var(--text);

    max-width: 351px;
    font-size: 56px;
    font-style: normal;
    font-weight: 700;
    line-height: 80px; /* 142.857% */
    letter-spacing: 2.24px;
    &--highlight {
      color: #f14a16;
    }
  }
  &__description {
    margin-bottom: 43px;
    max-width: 367px;

    &::after {
      content: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pharetra, phasellus";
      color: var(--secondary);

      font-size: 18px;
      font-style: normal;
      font-weight: 250;
      line-height: 40px; /* 222.222% */
      letter-spacing: 0.36px;
      max-width: 367px;
    }
  }

  &__CTA {
    display: flex;
    gap: 34px;
    justify-content: space-between;
    &--mr24 {
      margin-right: 24px;
    }
    &-icon {
      filter: var(--brightness-filter);
    }
  }

  &__footer {
    margin-top: 32px;
    margin-right: -23px;
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
    gap: 53px;
    // justify-content: center;
  }
  &__scroll-container {
    order: -1;
    align-self: flex-start;
  }
}

.stack {
  display: flex;
  gap: 20px;
  &--footer {
    flex-direction: column;
    gap: 28px;
  }
  &--g32 {
    gap: 32px;
  }
  &--order {
    order: -1;
  }
  &--timer {
    gap: 18px;
    justify-content: center;
    margin: 0 -28px;
  }
  &--scroll {
    width: 100%;
    overflow-y: visible;
    overflow-x: scroll;
    align-items: flex-end;
  }
  &--sm {
    height: 209px;
  }
  &--nopad {
    box-sizing: border-box;
    margin: 0 -24px;
    padding-left: 24px;
    width: 99vw;
  }
  &__entry {
    color: white;
    flex-direction: column;
  }
  &__link {
    font-size: 24px;
    // line-height: 46px; /* 191.667% */
    letter-spacing: 0.48px;
    font-weight: 400;
    &--header {
      font-weight: 700;
    }
  }

  // overflow-y: visible;
  // z-index: 10;
}

.timer {
  display: flex;
  flex-direction: column;
  align-items: center;
  flex-shrink: 0;
  &__value {
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 91.176px;
    height: 91.176px;
    border-radius: 32px;
    background: #370665;
    font-size: 46px;
    font-weight: 700;
    letter-spacing: 2.3px;
  }
  &__type {
    font-size: 32px;
    // font-weight: 400;
    letter-spacing: 0.64px;
  }
}

.button {
  padding: 8px 12px;
  border-radius: 20px;
  border: 3px solid #f14a16;
  text-align: center;
  font-size: 17px;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  letter-spacing: 0.68px;
  filter: var(--button-glow);
  &--img {
    height: 28px;
    border: none;
    filter: none;
    & .CTA-image {
      height: 100%;
    }
  }
  &--flex {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 8px;
  }
  &--primary {
    color: #e5e5e5;
    background: #f14a16;
  }
  &--secondary {
    color: #f14a16;
  }
  &--scaling {
    flex: 1 1 100px;
  }
  &--sm {
    font-size: 10px;
    letter-spacing: 0.4px;
    padding: 8px 8px;
    &--bolder {
      font-size: 12px;
      letter-spacing: 0.48px;
    }
  }
  &--md {
    font-size: 14px;
    &--bolder {
      font-size: 18px;
    }
    gap: 6px;
  }
  &--lg {
    font-size: 18px;
    font-weight: 400;
    letter-spacing: 0.72px;
    &--bolder {
      font-size: 21px;
      font-weight: 700;
      letter-spacing: 0.84px;
    }
  }

  &__icon {
    width: 21px;
    height: 21px;
    align-self: center;
    &--sm {
      width: 15px;
      height: 15px;
    }
    &--md {
      width: 20px;
      height: 20px;
    }
  }
}

.search {
  display: flex;
  justify-content: start;
  border-radius: 30px;
  background: #f8f8f8;
  padding: 8px 13px;
  gap: 8px;
  align-items: center;
  &__icon {
    width: 18px;
    height: 18px;
    flex-shrink: 0;
  }
  &__field {
    border: none;
    position: relative;
    background: none;
    width: 100%;
    font-size: 16px;
    color: #000;
    padding: 0;
    &::placeholder {
      margin: auto;
      color: #858585;
      font-size: 16px;
      font-weight: 400;
      letter-spacing: 0.64px;
      position: absolute;
      top: 50%;
      transform: translate(0, -50%);
    }
  }
}

.blob-wrapper {
  display: var(--show);
  position: absolute;
  box-sizing: border-box;
  overflow-x: clip;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
  z-index: -1;
  // overflow: hidden;
}
/* ... */

